--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,18 +5,17 @@ phases:
       - echo "Nothing to install for static site."
   build:
     commands:
-      - echo "Creating CloudFront invalidation..."
-      - aws cloudfront create-invalidation \
-          --distribution-id EZRMGXS9NAP23 \
-          --paths "/*"
+      - echo "No build step."
 artifacts:
   files:
-      - index.html
-      - main.html
-      - post.html
-      - css/**/*
-      - js/**/*
-    discard-paths: no
+    - index.html
+    - main.html
+    - post.html
+    - css/**/*
+    - js/**/*
+    - images/**/*        # if you have images
+  discard-paths: no
+
 
 # version: 0.2
 # phases:
@@ -25,16 +24,20 @@ artifacts:
 #       - echo "Nothing to install for static site."
 #   build:
 #     commands:
-#       - echo "No build step."
+#       - echo "Creating CloudFront invalidation..."
+#       - aws cloudfront create-invalidation \
+#           --distribution-id EZRMGXS9NAP23 \
+#           --paths "/*"
 # artifacts:
 #   files:
-#     - index.html
-#     - main.html
-#     - post.html
-#     - css/**/*
-#     - js/**/*
-#     - images/**/*        # if you have images
-#   discard-paths: no
+#       - index.html
+#       - main.html
+#       - post.html
+#       - css/**/*
+#       - js/**/*
+#     discard-paths: no
+
+
 
 # version: 0.2
 
